code/compiler/test/analysis/diagnostics_input_tests/global_access.c.diag
Error: [Basic] Invalid write access to global memory location
                from: "main"
<input_filepath>@4:5-4:9
    x = 5;
    ^~~~~
Error: [Basic] Invalid read access to global memory location
                from: "main"
<input_filepath>@5:13
    int y = x;
            ^
