code/compiler/test/analysis/diagnostics_input_tests/global_access.c
int x;

int main(void) {
    x = 5;
    int y = x;
}
